code25_all/swift/24873166.txt
Self
extension NSObject {
    class func makeOne() -> Self {
        return self()
    }
}

let set : NSCountedSet = NSCountedSet.makeOne()

extension NSObject {
    class func makeTwo() -> (Self, Self) {
        return (self(), self())
    }

    class func makeMany() -> [Self] {
        return [self(), self(), self(), self(), self()]
    }
}

<REPL>:11:34: error: 'Self' is only available in a protocol or as the result of a class method; did you mean 'NSObject'?
        class func makeTwo() -> (Self, Self) {
                                 ^~~~
                                 NSObject
<REPL>:11:40: error: 'Self' is only available in a protocol or as the result of a class method; did you mean 'NSObject'?
        class func makeTwo() -> (Self, Self) {
                                       ^~~~
                                       NSObject
<REPL>:15:35: error: 'Self' is only available in a protocol or as the result of a class method; did you mean 'NSObject'?
        class func makeMany() -> [Self] {
                                  ^~~~
                                  NSObject

